traefik/pve/pve-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-ingress
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve.lab53.net`)
      kind: Rule
      services:
        - name: pve-service
          passHostHeader: false
          serversTransport: traefik-insecuretransport@kubernetescrd
          port: 8006
  tls:
    certResolver: letsencrypt
